# aidm

ai-dungeon-master/: aidm.service  config.yaml  pyproject.toml  requirements.txt  setup.sh
ai-dungeon-master/ai_dungeon_master.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ai-dungeon-master/data/: library.json
ai-dungeon-master/data/maps/Crypt of the mellified mage/: module_briefing.md
ai-dungeon-master/data/maps/Forbidden Lands/: module_briefing.md
ai-dungeon-master/data/maps/Ravens Purge/: module_briefing.md
ai-dungeon-master/data/maps/Spire Of Quetzal/: module_briefing.md
ai-dungeon-master/data/maps/barrowmaze/: map_data.json  module_briefing.md
ai-dungeon-master/data/maps/bitter-reach/: module_briefing.md
ai-dungeon-master/data/maps/crypt-mellified-mage/: module_briefing.md
ai-dungeon-master/data/maps/xyntillan/: map_data.json  module_briefing.md
ai-dungeon-master/data/sessions/: aidm.db
ai-dungeon-master/src/: library.py  main.py  server.py
ai-dungeon-master/src/cli/: commands.py  interface.py
ai-dungeon-master/src/dm/: context.py  engine.py  prompt_builder.py  prompts.py  tool_builder.py  tools.py  vision.py
ai-dungeon-master/src/game/: character.py  character_factory.py  combat.py  dice.py  equipment.py  generic_character.py  state.py  tables.py
ai-dungeon-master/src/persistence/: db.py
ai-dungeon-master/src/rag/: ingest.py  query.py  store.py
ai-dungeon-master/src/systems/: __init__.py  extractor.py  loader.py  schema.py
ai-dungeon-master/static/: index.html  library.html
(+4 files in other folders)
