[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dungeon-master"
version = "0.1.0"
description = "AI Dungeon Master for OSR/OSE tabletop RPGs"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "PyMuPDF>=1.23.0",
    "ollama>=0.3.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
aidm = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
