[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dungeon-master"
version = "0.2.0"
description = "AI Dungeon Master server for OSR/OSE tabletop RPGs"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "PyMuPDF>=1.23.0",
    "ollama>=0.3.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

[project.scripts]
aidm = "src.main:main"
aidm-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
